--- a/index_o.html
+++ b/index_o.html
@@ -5,7 +5,7 @@
      	<meta content="width=device-width, initial-scale=1.0" name="viewport">
      	<meta name="description" content="">
 			<meta property="og:description" content="1월23일 토요일 12시."/>
-	<meta property="og:image" content="https://mamoth2001.github.io/images/title.jpg"/>
+	<meta property="og:image" content="https://mamoth2001.github.io/images/title_kt.jpg"/>
       	<meta name="경환" content="지선">
       	<title>경환과 지선의 결혼식에 초대합니다.</title>
 
