--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
 
                         <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
                         	<h3>사랑의 큐피트 (사람)</h3>
-                            <p>경환: 웰던으로.</p>
-														<p>지선: 익혀주세요.</p>
+                            <p>경환: 추웅서엉!.</p>
+														<p>지선: 은~니!.</p>
                         </div>
 
                         <div class="vertical-line">
