--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="text-center">신랑 - 이경환</h2>
+                        		<h2 class="text-center">경 환</h2>
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
             							<i class="de-icon-heart"></i>
@@ -235,7 +235,7 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="text-center">신부 - 박지선</h2>
+                        		<h2 class="text-center">지 선</h2>
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
