--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
                                     </div>
                                     <div id="banner-date">
                                     	- 2021.01.23 오후 12시 00분 -</br>
-																			밀리토피아호텔 그랜드볼룸
+																			밀리토피아호텔 그랜드볼룸				
                                     </div>
-
 								</div>
 							</div>
 						</div>
@@ -151,8 +150,8 @@
                 		<ul id="nav-menu" class="nav-smooth-scroll">
                 			<li class="first-child">
                         		<a href="#main-slider">맨 위로</a>
-                        	</li>
-													<li>
+							</li>
+							<li>
 	                            	<a href="#our-story">우리 이야기</a>
 	                            </li>
                     		<li class="first-child split-margin">
@@ -161,10 +160,9 @@
                             <li>
                             	<a href="#gallery-section">갤러리</a>
 							</li>
-							    <a href="#rsvp-section">드리는 말씀</a>
-						</li>
-
-
+													<li>
+							    <a href="#rsvp-section">당부의 말씀</a>
+							</li>
                 		</ul>
 
                     	<div class="clearboth"></div>
@@ -204,7 +202,7 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="text-center">경 환</h2>
+                        		<h2 class="text-center">경환</h2>
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
             							<i class="de-icon-heart"></i>
@@ -213,7 +211,7 @@
                             </div>
 
                             <p class="blurb animation fadeInLeft text-center">
-                            	다랭이 만만세입니다
+                            	1986년에 경기 성남시에서 태어나 어영부영 살다 20대부터 인생의 절반 가끼이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 인간으로 만들어주러 온 나의 구세주 아내님을 만나 참된 인간으로 거듭나게 되었습니다. 아내님에게 구박받고 같이 동숲하며 쇼파에 앉은 다롱이와 마루,토트를 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
@@ -235,7 +233,7 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="text-center">지 선</h2>
+                        		<h2 class="text-center">지선</h2>
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
@@ -288,7 +286,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '사랑의 큐피트들');"  href="./images/ourstory1.jpg" class="magnific-zoom" title="사랑의 큐피트들">
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '드라이브');"  href="./images/ourstory1.jpg" class="magnific-zoom" title="사랑의 큐피트들">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -304,17 +302,16 @@
                         <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
                         	<div class="arrow-left"></div>
                             <div class="story-date">
-                            	<div class="date-only">04</div>
-                                <div class="month-year">2019</div>
+                            	<div class="date-only">01</div>
+                                <div class="month-year">첫번째</div>
                            </div>
                            <div class="arrow-right"></div>
                            <div class="clearboth"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
-                        	<h3>사랑의 큐피트들 (축생)</h3>
-                            <p>경환: 다롱아 매듭!.</p>
-														<p>지선: 마루야 짖지마.</p>
+                        	<h3>드라이브</h3>
+                            <p>드라이브 갑니다~ 드라이브 고고싱~<br/>다롱이와 마루도 같이가요~<br/>코로나로 나들이는 못가지만<br/> 드라이브로 콧바람을 충전합니다. </p>
                         </div>
 
                         <div class="vertical-line">
@@ -341,7 +338,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '한우목장');" href="./images/ourstory3.jpg" class="magnific-zoom" title="한우목장">
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '광교호수공원');" href="./images/ourstory3.jpg" class="magnific-zoom" title="한우목장">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -358,16 +355,17 @@
                         	<div class="arrow-left"></div>
                             <div class="story-date">
                             	<div class="date-only">02</div>
-                                <div class="month-year">2020</div>
+                                <div class="month-year">두번째</div>
                            </div>
                            <div class="arrow-right"></div>
                            <div class="clearboth"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-                        	<h3>사랑의 큐피트 (사람)</h3>
-                            <p>경환: 추웅서엉!.</p>
-														<p>지선: 은~니!.</p>
+                        	<h3>광교호수공원</h3>
+                            <p>드디어 그네를~<br/>항상 그네에 커플들이 가득해 앉지 못했던 2인....<br/>
+								드디어 서로 코로나 예방수칙을 지키며 앉아서 <br/>도란도란 이야기 합니다.
+								<br/>사진 속에는 안보이지만 마루,다롱이도 함께!!</p>
                         </div>
 
                         <div class="vertical-line">
@@ -394,7 +392,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '여행');" href="./images/ourstory2.jpg" class="magnific-zoom" title="여행">
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '두물머리핫도그');" href="./images/ourstory2.jpg" class="magnific-zoom" title="여행">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -410,17 +408,18 @@
                         <div class="col-md-2 text-center story-date-wrapper animation fadeIn">
                         	<div class="arrow-left"></div>
                             <div class="story-date">
-                            	<div class="date-only">10</div>
-                                <div class="month-year">2020</div>
+                            	<div class="date-only">03</div>
+                                <div class="month-year">세번째</div>
                            </div>
                            <div class="arrow-right"></div>
                            <div class="clearboth"></div>
                         </div>
 
                         <div class="col-md-4 animation delay1 fadeInRight">
-                        	<h3>민속촌</h3>
-                            <p>경환: 열라게 추웠다.</p>
-														<p>지선: 나는 따뜻했다.</p>
+                        	<h3>두물머리핫도그</h3>
+                            <p>맛있는걸 좋아하는 지선이를 위해 맛있는 간식을 찾아서~ <br/>
+								맛있는 간식도 먹고 자연풍경도 보러 두물머리로 출발~ <br/>
+								핫도그는 맛있었고 두물머리는 멋있었다!</p>
 
                         </div>
 
@@ -448,7 +447,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '어디로?');"  href="./images/ourstory4.jpg" class="magnific-zoom" title="어디로?">
+                                     		<a onclick="ga('send', 'event', '스토리', '클릭', '속초여행');"  href="./images/ourstory4.jpg" class="magnific-zoom" title="어디로?">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -464,18 +463,18 @@
                         <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
                         	<div class="arrow-left"></div>
                             <div class="story-date">
-                            	<div class="date-only">11</div>
-                                <div class="month-year">2020</div>
+                            	<div class="date-only">04</div>
+                                <div class="month-year">네번째</div>
                            </div>
                            <div class="arrow-right"></div>
                            <div class="clearboth"></div>
                         </div>
 
                         <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-                        	<h3>어디로?</h3>
-                            <p>경환: 다롱이가 날뛴다.</p>
-														<p>지선: 마루는 안날뛴다.
-														</p>
+                        	<h3>속초여행</h3>
+                            <p>첫 일출을 보러 속초로 출발~<br/>
+								비록 해가 구름에 살짝 가려져 잘 못보았지만<br/> 첫 일출 앞에서 사진 찰칵!<br/>
+								속초에서 맛있는것도 먹고 행복한 시간을 보냈습니다.</p>
                         </div>
 
                         <div class="vertical-line">
@@ -502,7 +501,7 @@
 													<div class="alignment">
 														<div class="v-align center-middle">
 
-															<a onclick="ga('send', 'event', '스토리', '클릭', '집 꾸미기');" href="./images/ourstory5.jpg" class="magnific-zoom" title="집 꾸미기">
+															<a onclick="ga('send', 'event', '스토리', '클릭', '한우마을 흔들그네');" href="./images/ourstory5.jpg" class="magnific-zoom" title="집 꾸미기">
 									<div class="de-icon circle light medium-size inline">
 											<i class="de-icon-zoom-in"></i>
 										</div>
@@ -518,17 +517,18 @@
 							<div class="col-md-2 text-center story-date-wrapper animation fadeIn">
 								<div class="arrow-left"></div>
 									<div class="story-date">
-										<div class="date-only">11</div>
-											<div class="month-year">2020</div>
+										<div class="date-only">05</div>
+											<div class="month-year">다섯번째</div>
 								 </div>
 								 <div class="arrow-right"></div>
 								 <div class="clearboth"></div>
 							</div>
 
 							<div class="col-md-4 animation delay1 fadeInRight">
-								<h3>집 꾸미기</h3>
-									<p>경환: 분당 아줌마 소굴이네요!</p>
-									<p>지선: 저는 침대를 좋아합니다.</p>
+								<h3>한우마을 흔들그네</h3>
+									<p>소도 보고 사진도 냄기고~<br/>
+										그네가 있음 한번씩 타주는 것이 인지상정~<br/>
+										사진 찍을 동안만 턱스크에요! 걱정마세요.</p>
 
 							</div>
 
@@ -556,7 +556,7 @@
 												 <div class="alignment">
 													 <div class="v-align center-middle">
 
-														 <a onclick="ga('send', 'event', '스토리', '클릭', '속초여행');" href="./images/ourstory6.jpg" class="magnific-zoom" title="속초여행">
+														 <a onclick="ga('send', 'event', '스토리', '클릭', '웨딩촬영메이크업');" href="./images/ourstory6.jpg" class="magnific-zoom" title="속초여행">
 								 <div class="de-icon circle light medium-size inline">
 										 <i class="de-icon-zoom-in"></i>
 									 </div>
@@ -572,17 +572,17 @@
 						 <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
 							 <div class="arrow-left"></div>
 								 <div class="story-date">
-									 <div class="date-only">07</div>
-										 <div class="month-year">2020</div>
+									 <div class="date-only">06</div>
+										 <div class="month-year">여섯번째</div>
 								</div>
 								<div class="arrow-right"></div>
 								<div class="clearboth"></div>
 						 </div>
 
 						 <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-							 <h3>속초여행</h3>
-								 <p>경환: 동해바다 오랬만에 와보는 경기도 촌놈.</p>
-								<p>지선: 동해바다 처음 와보는 서해바다 토박이.</p>
+							 <h3>웨딩촬영 메이크업</h3>
+								 <p>드디어 웨딩촬영 날이 밝았습니다.<br/>
+									얼굴과 머리를 꽃단장하고 촬영 준비를 하고 한컷!</p>
 						 </div>
 
 						 <div class="vertical-line">
@@ -1035,13 +1035,26 @@
 
                         	<div class="section-title animation fadeInUp">
                         		<h2>
-                            		고맙습니다.
-                            	</h2>
+                            		당부의 말씀.
+								</h2>
+								<div class="heart-divider animation delay1 fadeInUp">
+									<span class="white-line"></span>
+									<i class="de-icon-heart pink-heart"></i>
+									<i class="de-icon-heart white-heart"></i>
+									<span class="white-line"></span>
+								</div>
 
+								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">혹시 예식에 참석하지 못하시더라도 충분히 이해하며<br/> 서운해하지 않겠습니다.<br/> 참석에 대한 마음의 부담을 갖지 않으셨으면 합니다,<br/> 저희의 결혼을 축하해주시는 모든 분들께 진심으로 감사드립니다.
+								</h1>
+								</div>
                             	<p>
-                            		<a onclick="ga('send', 'event', '페이스북 이벤트 페이지', '링크 클릭');" target="_blank" href="https://www.facebook.com/" style="text-decoration: underline;color:#37A4FF;">공사중</a>
+                            		<a onclick="ga('send', 'event', '페이스북 이벤트 페이지', '링크 클릭');" target="_blank" href="https://www.facebook.com/" style="text-decoration: underline;color:#37A4FF;"></a>
                             	</p>
-
+								
+								<i class="de-icon-heart pink-heart"></i>
+								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> <li>신부(박지선) 아버지 계좌번호 : 씨티은행  428 - 22958 - 265 (박근재)</li>
+						
+								<li>신랑(이경환) 아버지 계좌번호 : 농협은행 690 - 12 - 015882 (이용근)</li>
                           	</div>
                         </div>
                    </div> <!-- END of ROW-1 -->
