--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 									<span class="white-line"></span>
 								</div>
 
-								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">혹시 예식에 참석하지 못하시더라도 충분히 이해하며<br/> 서운해하지 않겠습니다.<br/> 참석에 대한 마음의 부담을 갖지 않으셨으면 합니다,<br/> 저희의 결혼을 축하해주시는 모든 분들께 진심으로 감사드립니다.
+								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">혹시 예식에 참석하지 못하시더라도 충분히 이해하며 서운해하지 않겠습니다.<br/> 참석에 대한 마음의 부담을 갖지 않으셨으면 합니다,<br/> 저희의 결혼을 축하해주시는 모든 분들께 진심으로 감사드립니다.
 								</h1>
 								</div>
                             	<p>
@@ -1052,9 +1052,9 @@
                             	</p>
 								
 								<i class="de-icon-heart pink-heart"></i>
-								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> <li>신부(박지선) 아버지 계좌번호 : 씨티은행  428 - 22958 - 265 (박근재)</li>
+								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> <li>신부(박지선) 아버지 계좌번호 <br/>씨티은행  428 - 22958 - 265 (박근재)</li>
 						
-								<li>신랑(이경환) 아버지 계좌번호 : 농협은행 690 - 12 - 015882 (이용근)</li>
+								<li>신랑(이경환) 아버지 계좌번호 <br/>농협은행 690 - 12 - 015882 (이용근)</li>
                           	</div>
                         </div>
                    </div> <!-- END of ROW-1 -->
