--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </div>
 
                             <p class="blurb animation fadeInLeft text-center">
-                            	1986년에 경기 성남시에서 태어나 어영부영 살다 20대부터 인생의 절반 가끼이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 인간으로 만들어주러 온 나의 구세주 아내님을 만나 참된 인간으로 거듭나게 되었습니다. 아내님에게 구박받고 같이 동숲하며 쇼파에 앉은 다롱이와 마루,토트를 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1986년에 경기 성남시에서 태어나 어영부영 살다 20대부터 인생의 절반 가끼이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 인간으로 만들어주러 온 나의 구세주 아내님을 만나 참된 인간으로 거듭나게 되었습니다. 아내님에게 구박받고 같이 동숲하며 쇼파에 앉은 다롱이와 마루,토트 개님들을 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
