--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                     <div class="row">
                     	<div class="col-md-12 text-center">
                         	<div id="end-of-story" class="animation fadeInUp">
-                        		<h2>그리고 드디어 결혼을 하게 되었습니다.</h2>
+                        		<h2>그리고 드디어<br/> 결혼을 하게 되었습니다.</h2>
                                 <div class="heart-divider">
                                     	<span class="grey-line"></span>
                                         <i class="de-icon-heart pink-heart"></i>
