--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </div>
 
                             <p class="blurb animation fadeInLeft text-center">
-                            	1986년에 경기 성남시에서 태어나 어영부영 살다 20대부터 인생의 절반 가끼이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 인간으로 만들어주러 온 나의 구세주 아내님을 만나 참된 인간으로 거듭나게 되었습니다. 아내님에게 구박받고 같이 동숲하며 쇼파에 앉은 다롱이와 마루,토트 개님들을 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1986년에 경기 성남시에서 태어나 어영부영 살다 20대부터 인생의 절반 가까이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 인간으로 만들어주러 온 나의 구세주 아내님을 만나 참된 인간으로 거듭나게 되었습니다. 아내님과 같이 동숲하며 쇼파에 앉은 다롱이와 마루,토트 개님들을 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
@@ -1044,7 +1044,7 @@
 									<span class="white-line"></span>
 								</div>
 
-								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">혹시 예식에 참석하지 못하시더라도 충분히 이해하며 서운해하지 않겠습니다.<br/> 참석에 대한 마음의 부담을 갖지 않으셨으면 합니다,<br/> 저희의 결혼을 축하해주시는 모든 분들께 진심으로 감사드립니다.
+								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">예식에 참석하지 못하시더라도 충분히 이해하며 서운해하지 않겠습니다.<br/> 참석에 대한 마음의 부담을 갖지 않으셨으면 합니다,<br/> 결혼을 축하해주시는 모든 분들께 진심으로 감사드립니다.
 								</h1>
 								</div>
                             	<p>
@@ -1052,7 +1052,7 @@
                             	</p>
 								
 								<i class="de-icon-heart pink-heart"></i>
-								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> <li>신부(박지선) 아버지 계좌번호 <br/>씨티은행  428 - 22958 - 265 (박근재)</li>
+								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> <li>신부(박지선) 아버지 계좌번호 <br/>씨티은행  428 - 22958 - 265 (박근재)신부(박지선) 아버지 계좌번호 <br/>씨티은행  428 - 22958 - 265 (박근재)</li>
 								<br/>
 								<li>신랑(이경환) 아버지 계좌번호 <br/>농협은행 690 - 12 - 015882 (이용근)</li>
                           	</div>
