--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </div>
 
                             <p class="blurb animation fadeInLeft text-center">
-                            	1986년에 경기 성남시에서 태어나 어영부영 살다 20대부터 인생의 절반 가까이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 인간으로 만들어주러 온 나의 구세주 아내님을 만나 참된 인간으로 거듭나게 되었습니다. 아내님과 같이 동숲하며 쇼파에 앉은 다롱이와 마루,토트 개님들을 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1986년에 경기 성남시에서 태어나 인생의 절반 가까이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 인간으로 만들어주러 온 나의 구세주 아내님을 만나 참된 인간으로 거듭나게 되었습니다. 아내님과 같이 동숲하며 쇼파에 앉은 다롱이와 마루,토트 개님들을 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
@@ -237,7 +237,7 @@
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
-                            	마루,토트 만만세입니다
+                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 넘어왔습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 부르주아의 삶을 살았습니다. 대학 졸업후 경북에서 강아지와 함께 하는 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편님을 만났습니다. 남편님과 맛있는 것으며 수다를 떠는걸 즐기는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
@@ -311,7 +311,7 @@
 
                         <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
                         	<h3>드라이브</h3>
-                            <p>드라이브 갑니다~ 드라이브 고고싱~<br/>다롱이와 마루도 같이가요~<br/>코로나로 나들이는 못가지만<br/> 드라이브로 콧바람을 충전합니다. </p>
+                            <p>드라이브 갑니다~ <br/>다롱이와 마루도 같이가요~<br/>코로나로 나들이는 못가지만<br/> 드라이브로 콧바람을 충전합니다. </p>
                         </div>
 
                         <div class="vertical-line">
@@ -417,7 +417,7 @@
 
                         <div class="col-md-4 animation delay1 fadeInRight">
                         	<h3>두물머리핫도그</h3>
-                            <p>맛있는걸 좋아하는 지선이를 위해 맛있는 간식을 찾아서~ <br/>
+                            <p>맛있는걸 좋아하는 아내님을 위해 맛있는 간식을 찾아서~ <br/>
 								맛있는 간식도 먹고 자연풍경도 보러 두물머리로 출발~ <br/>
 								핫도그는 맛있었고 두물머리는 멋있었다!</p>
 
@@ -526,7 +526,7 @@
 
 							<div class="col-md-4 animation delay1 fadeInRight">
 								<h3>한우마을 흔들그네</h3>
-									<p>소도 보고 사진도 냄기고~<br/>
+									<p>소도 보고 사진도 남기고~<br/>
 										그네가 있음 한번씩 타주는 것이 인지상정~<br/>
 										사진 찍을 동안만 턱스크에요! 걱정마세요.</p>
 
@@ -762,7 +762,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '클릭해주셔서 고맙습니다');" href="./images/g1.jpg" class="magnific-zoom-gallery" title="클릭해주셔서 고맙습니다.">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '클릭해주셔서 고맙습니다');" href="./images/g1.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -792,7 +792,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '집에서 가져간 안경');" href="./images/g8.jpg" class="magnific-zoom-gallery" title="집에서 가져간 안경">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '집에서 가져간 안경');" href="./images/g8.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -822,7 +822,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', 'i love you');" href="./images/g3.jpg" class="magnific-zoom-gallery" title="I Love You를 뜻합니다.">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', 'i love you');" href="./images/g3.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -852,7 +852,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '앉아있기 불편함');" href="./images/g4.jpg" class="magnific-zoom-gallery" title="앉아있기 불편함">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '앉아있기 불편함');" href="./images/g4.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -882,7 +882,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '봐도봐도 좋은');" href="./images/g5.jpg" class="magnific-zoom-gallery" title="봐도봐도 좋은">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '봐도봐도 좋은');" href="./images/g5.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -912,7 +912,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '허허 저것 좀 보세요');" href="./images/g6.jpg" class="magnific-zoom-gallery" title="허허 저것 좀 보세요">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '허허 저것 좀 보세요');" href="./images/g6.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -942,7 +942,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '신부가 예쁘다');" href="./images/g7.jpg" class="magnific-zoom-gallery" title="신부가 예쁘다">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '신부가 예쁘다');" href="./images/g7.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -972,7 +972,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '너무나 아름다운');" href="./images/g2.jpg" class="magnific-zoom-gallery" title="너무나 아름다운">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '너무나 아름다운');" href="./images/g2.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -1002,7 +1002,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '긴 하루의 끝');" href="./images/g9.jpg" class="magnific-zoom-gallery" title="긴 하루의 끝">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '긴 하루의 끝');" href="./images/g9.jpg" class="magnific-zoom-gallery" title="~">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -1052,9 +1052,9 @@
                             	</p>
 								
 								<i class="de-icon-heart pink-heart"></i>
-								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> <li>신부(박지선) 아버지 계좌번호 <br/>씨티은행  428 - 22958 - 265 (박근재)신부(박지선) 아버지 계좌번호 <br/>씨티은행  428 - 22958 - 265 (박근재)</li>
+								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> <li>신부(박지선) <br/> 아버지 계좌번호 씨티은행  428  -  22958  -  265   (박근재)<br/>어머니 계좌번호 국민은행 225902 - 04 - 080852 (고후자) <br/>
 								<br/>
-								<li>신랑(이경환) 아버지 계좌번호 <br/>농협은행 690 - 12 - 015882 (이용근)</li>
+								<li>신랑(이경환) <br/>  아버지 계좌번호 농협은행 690 - 12 - 015882 (이용근)</li>
                           	</div>
                         </div>
                    </div> <!-- END of ROW-1 -->
