--- a/index.html
+++ b/index.html
@@ -1052,9 +1052,9 @@
                             	</p>
 								
 								<i class="de-icon-heart pink-heart"></i>
-								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> <li>신부 (박지선) <br/> 아버지 계좌번호 씨티은행  428  -  22958  -  265   (박근재)<br/>어머니 계좌번호 국민은행 225902 - 04 - 080852 (고후자) <br/>
+								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> </i><strong><li>신부 (박지선)</strong> <br/> 아버지 계좌번호 씨티은행  428  -  22958  -  265   (박근재)<br/>어머니 계좌번호 국민은행 225902 - 04 - 080852 (고후자) <br/>
 								<br/>
-								<li>신랑 (이경환) <br/>  아버지 계좌번호 농협은행 690 - 12 - 015882 (이용근)<br/>어머니 계좌번호 우리은행 499 - 000946 - 12- 001 (박종희) <br/></li>
+							</i><strong><li>신랑 (이경환)</strong> <br/>  아버지 계좌번호 농협은행 690 - 12 - 015882 (이용근)<br/>어머니 계좌번호 우리은행 499 - 000946 - 12- 001 (박종희) <br/></li>
                           	</div>
                         </div>
                    </div> <!-- END of ROW-1 -->
