--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
-                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 넘어왔습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 부르주아의 삶을 살았습니다. 대학 졸업후 경북에서 강아지와 함께 하는 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편님을 만났습니다. 남편님과 맛있는 것으며 수다를 떠는걸 즐기는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 넘어왔습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 부르주아의 삶을 살았습니다. 대학 졸업후 경북에서 강아지와 함께 하는 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편님을 만났습니다. 남편님과 맛있는 것을 먹으며 수다를 떠는걸 즐기는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
@@ -1044,7 +1044,7 @@
 									<span class="white-line"></span>
 								</div>
 
-								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">예식에 참석하지 못하시더라도 충분히 이해하며 서운해하지 않겠습니다.<br/> 참석에 대한 마음의 부담을 갖지 않으셨으면 합니다,<br/> 결혼을 축하해주시는 모든 분들께 진심으로 감사드립니다.
+								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">예식에 참석하지 못하시더라도 충분히 이해하며 <br/> 참석에 대한 부담을 갖지 않으셨으면 합니다,<br/> 결혼을 축하해주시는 모든 분들께 감사드립니다.
 								</h1>
 								</div>
                             	<p>
