--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 									<span class="white-line"></span>
 								</div>
 
-								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">예식에 참석하지 못하시더라도 충분히 이해하며 <br/> 참석에 대한 부담을 갖지 않으셨으면 합니다,<br/> 결혼을 축하해주시는 모든 분들께 감사드립니다.
+								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">예식에 참석하지 못하시더라도 충분히 이해하며 <br/> 참석에 대한 부담을 갖지 않으셨으면 합니다<br/> 결혼을 축하해주시는 모든 분들께 감사드립니다
 								</h1>
 								</div>
                             	<p>
