--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="text-center">경환</h2>
+                        		<h3 class="text-center">이용근 박종희 <font color="#A6A6A6">의 장남</font> 이경환
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
             							<i class="de-icon-heart"></i>
@@ -233,7 +233,7 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="text-center">지선</h2>
+                        		<h3 class="text-center">박근재 고후자 <font color="#A6A6A6"> 의 차녀</font> 박지선</h3>
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
