--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </div>
 
                             <p class="blurb animation fadeInLeft text-center">
-                            	1986년에 경기 성남시에서 태어나 인생의 절반 가까이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 인간으로 만들어주러 온 나의 구세주 아내님을 만나 참된 인간으로 거듭나게 되었습니다. 아내님과 같이 동숲하며 쇼파에 앉은 다롱이와 마루,토트 개님들을 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1986년에 경기 성남시에서 태어나 인생의 절반 가까이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 사람으로 만들어주러 온 나의 구세주 아내를 만나 참된 사람으로 거듭나게 되었습니다. 아내와 같이 동물의 숲을 하며 쇼파에 앉은 다롱이와 마루,토트를 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
@@ -237,7 +237,7 @@
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
-                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 넘어왔습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 부르주아의 삶을 살았습니다. 대학 졸업후 경북에서 강아지와 함께 하는 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편님을 만났습니다. 남편님과 맛있는 것을 먹으며 수다를 떠는걸 즐기는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 넘어왔습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 부르주아의 삶을 살았었고, 대학 졸업후 경북에서 강아지와 함께 하는 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편을 만났습니다. 남편과 맛있는 것을 먹으며 수다를 떠는걸 즐기는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
@@ -416,10 +416,8 @@
                         </div>
 
                         <div class="col-md-4 animation delay1 fadeInRight">
-                        	<h3>두물머리핫도그</h3>
-                            <p>맛있는걸 좋아하는 아내님을 위해 맛있는 간식을 찾아서~ <br/>
-								맛있는 간식도 먹고 자연풍경도 보러 두물머리로 출발~ <br/>
-								핫도그는 맛있었고 두물머리는 멋있었다!</p>
+                        	<h3>한국민속촌</h3>
+                            <p>왕의 정원에 있었다던 정자에 올라가 한컷~ <br/>초가을 날씨에 추위에 떨면서 찍어 웃음기가 하나도 없네요! <br/></p>
 
                         </div>
 
