--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     	<h1>경환이와 지선이가 결혼합니다.</h1>
                                     </div>
                                     <div id="banner-date">
-                                    	- 2021.01.23 오후 12시 00분 -</br>
+                                    	- 2021.01.23(토) 12시 -</br>
 																			밀리토피아호텔 그랜드볼룸				
                                     </div>
 								</div>
@@ -211,7 +211,7 @@
                             </div>
 
                             <p class="blurb animation fadeInLeft text-center">
-                            	1986년에 경기 성남시에서 태어나 인생의 절반 가까이 15년간 전국을 떠돌며 기나긴 직업군인의 길을 걸어왔습니다. 그 와중에 나를 사람으로 만들어주러 온 나의 구세주 아내를 만나 참된 사람으로 거듭나게 되었습니다. 아내와 같이 동물의 숲을 하며 쇼파에 앉은 다롱이와 마루,토트를 쓰다듬어주는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1986년에 경기도 성남시에서 태어나 인생의 절반 가까이 14년간 전국을 떠돌며 직업군인의 길을 걸어왔습니다. 그러던중 나를 사람으로 만들어주러 온 나의 구세주 아내를 만나 참된 사람으로 거듭나게 되었습니다. 아내와 같이 지내며 아내를 만나게끔 다리를 놓아준 저의 강아지 다롱이, 아내 강아지 마루,토트와 즐거운 시간을 보내는 것이 요즘 저의 가장 큰 행복입니다.
                             </p>
 
                         </div>
@@ -237,7 +237,7 @@
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
-                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 넘어왔습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 부르주아의 삶을 살았었고, 대학 졸업후 경북에서 강아지와 함께 하는 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편을 만났습니다. 남편과 맛있는 것을 먹으며 수다를 떠는걸 즐기는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 이사오게 되었습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 여유로운 삶을 살았었고, 대학 졸업후 경북에서 강아지 심리치료사 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편을 만났습니다. 남편과 맛난 것을 먹으며 알콩탈콩 이야기를 나누려는 것이 요즘 저의 가장 큰 바램입니다.
                             </p>
 
                         </div>
