--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
 									<span class="white-line"></span>
 								</div>
 
-								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">예식에 참석하지 못하시더라도 충분히 이해하며 <br/> 참석에 대한 부담을 갖지 않으셨으면 합니다<br/> 결혼을 축하해주시는 모든 분들께 감사드립니다
+								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">저의 두사람 평생을 함계하려는 약속의 자리입니다 <br/> 모든 하객님들의 축하를 받고 싶습니다만 <br/> 코로나로 인해 참석치 못하시더라도 이해하며 <br/> 결혼을 축하해 주시는 모든 분들께 진심으로 감사드립니다.
 								</h1>
 								</div>
                             	<p>
@@ -1050,9 +1050,9 @@
                             	</p>
 								
 								<i class="de-icon-heart pink-heart"></i>
-								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> </i><strong><li>신부 (박지선)</strong> <br/> 아버지 계좌번호 씨티은행  428  -  22958  -  265   (박근재)<br/>어머니 계좌번호 국민은행 225902 - 04 - 080852 (고후자) <br/>
+								<div id="footer-couple-name" class="animation delay2 fadeInUp"><h4 class="inline"></h4></div> </i><strong><li>신랑 (이경환)</strong> <br/>  아버지 계좌번호 농협은행 690 - 12 - 015882 (이용근)<br/>어머니 계좌번호 우리은행 499 - 000946 - 12- 001 (박종희) <br/>
 								<br/>
-							</i><strong><li>신랑 (이경환)</strong> <br/>  아버지 계좌번호 농협은행 690 - 12 - 015882 (이용근)<br/>어머니 계좌번호 우리은행 499 - 000946 - 12- 001 (박종희) <br/></li>
+							</i><strong><li>신부 (박지선)</strong> <br/> 아버지 계좌번호 씨티은행  428  -  22958  -  265   (박근재)<br/>어머니 계좌번호 국민은행 225902 - 04 - 080852 (고후자) <br/></li>
                           	</div>
                         </div>
                    </div> <!-- END of ROW-1 -->
