--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </div>
 
                             <p class="blurb animation fadeInLeft text-center">
-                            	1986년에 경기도 성남시에서 태어나 인생의 절반 가까이 14년간 전국을 떠돌며 직업군인의 길을 걸어왔습니다. 그러던중 나를 사람으로 만들어주러 온 나의 구세주 아내를 만나 참된 사람으로 거듭나게 되었습니다. 아내와 같이 지내며 아내를 만나게끔 다리를 놓아준 저의 강아지 다롱이, 아내 강아지 마루,토트와 즐거운 시간을 보내는 것이 요즘 저의 가장 큰 행복입니다.
+                            	1986년에 경기도 성남시에서 태어나 인생의 절반 가까이 14년간 전국을 다니며 직업군인의 길을 걸어왔습니다. 그러던중 나를 사람으로 만들어주러 온 나의 구세주 아내를 만나 참된 사람으로 거듭나게 되었습니다. 아내를 만나게끔 다리를 놓아준 저의 강아지 다롱이, 아내의 강아지 마루,토트와 즐거운 시간을 보내려는 것이 요즘 저의 가장 큰 바램입니다.
                             </p>
 
                         </div>
@@ -237,7 +237,7 @@
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
-                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 이사오게 되었습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 여유로운 삶을 살았었고, 대학 졸업후 경북에서 강아지 심리치료사 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편을 만났습니다. 남편과 맛난 것을 먹으며 알콩탈콩 이야기를 나누려는 것이 요즘 저의 가장 큰 바램입니다.
+                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 이사오게 되었습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 여유로운 삶을 살았었고, 대학 졸업후 경북에서 강아지 심리치료사로 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편을 만났습니다. 앞으로 남편과 맛난 것을 먹으며 알콩달콩 이야기를 나누고 예쁘게 려는 것이 요즘 저의 가장 큰 바램입니다.
                             </p>
 
                         </div>
