--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
 									<span class="white-line"></span>
 								</div>
 
-								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">저의 두사람 평생을 함계하려는 약속의 자리입니다 <br/> 모든 하객님들의 축하를 받고 싶습니다만 <br/> 코로나로 인해 참석치 못하시더라도 이해하며 <br/> 결혼을 축하해 주시는 모든 분들께 진심으로 감사드립니다.
+								<div id="footer-couple-name" class="animation delay1 fadeInUp"><h4 class="inline">저의 두사람 평생을 함계하려는 약속의 자리입니다 <br/> 모든 하객님들의 축하를 받고 싶습니다만 <br/> 코로나로 인해 참석치 못하시더라도 <br/> 결혼을 축하해 주시는 모든 분들께 진심으로 감사드립니다.
 								</h1>
 								</div>
                             	<p>
