--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             </div>
 
                             <p class="blurb animation fadeInRight text-center">
-                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 이사오게 되었습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 여유로운 삶을 살았었고, 대학 졸업후 경북에서 강아지 심리치료사로 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편을 만났습니다. 앞으로 남편과 맛난 것을 먹으며 알콩달콩 이야기를 나누고 예쁘게 려는 것이 요즘 저의 가장 큰 바램입니다.
+                            	1994년에 강화도에서 2녀로 태어나 어릴 때 인천으로 이사오게 되었습니다. 학창시절 친구들과 분식집에서 피카츄 돈까스를 뜯는 여유로운 삶을 살았었고, 대학 졸업후 경북에서 강아지 심리치료사로 직업에 종사하며 살다보니 진짜 강아지를 닮은 남편을 만났습니다. 앞으로 남편과 맛난 것을 먹으며 알콩달콩 이야기를 나누고 예쁘게 살려는 것이 요즘 저의 가장 큰 바램입니다.
                             </p>
 
                         </div>
