--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                         </div>
 
                         <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
-                        	<h3>드라이브</h3>
-                            <p>드라이브 갑니다~ <br/>다롱이와 마루도 같이가요~<br/>코로나로 나들이는 못가지만<br/> 드라이브로 콧바람을 충전합니다. </p>
+                        	<h3>큐피트 세마리</h3>
+                            <p>요크셔테리어 다롱이와 토트 그리고 푸틀 마루 <br/>3마리가 힘을 합쳐 노총각 하나를 구원했습니다 <br/>보상으로 맛있는 간식을 줍니다.<br/>  </p>
                         </div>
 
                         <div class="vertical-line">
@@ -362,10 +362,9 @@
                         </div>
 
                         <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-                        	<h3>광교호수공원</h3>
-                            <p>드디어 그네를~<br/>항상 그네에 커플들이 가득해 앉지 못했던 2인....<br/>
-								드디어 서로 코로나 예방수칙을 지키며 앉아서 <br/>도란도란 이야기 합니다.
-								<br/>사진 속에는 안보이지만 마루,다롱이도 함께!!</p>
+                        	<h3>하늘정원</h3>
+                            <p>드디어 하늘정원 의자에~<br/>하늘정원 의자에 커플들이 가득해 앉지 못했던 2인....<br/>
+								드디어 서로 앉아서 도란도란 이야기 합니다.
                         </div>
 
                         <div class="vertical-line">
@@ -469,10 +468,10 @@
                         </div>
 
                         <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-                        	<h3>속초여행</h3>
-                            <p>첫 일출을 보러 속초로 출발~<br/>
+                        	<h3>수목원 여행</h3>
+                            <p>산림욕을 하러 강릉수목원으로 출발~<br/>
 								비록 해가 구름에 살짝 가려져 잘 못보았지만<br/> 첫 일출 앞에서 사진 찰칵!<br/>
-								속초에서 맛있는것도 먹고 행복한 시간을 보냈습니다.</p>
+								강릉에서 맛있는것도 먹고 행복한 시간을 보냈습니다.</p>
                         </div>
 
                         <div class="vertical-line">
@@ -523,10 +522,10 @@
 							</div>
 
 							<div class="col-md-4 animation delay1 fadeInRight">
-								<h3>한우마을 흔들그네</h3>
-									<p>소도 보고 사진도 남기고~<br/>
-										그네가 있음 한번씩 타주는 것이 인지상정~<br/>
-										사진 찍을 동안만 턱스크에요! 걱정마세요.</p>
+								<h3>한우마을 </h3>
+									<p>소도 보고 양도 보고 기념도 남기고~<br/>
+										야경이 예뻐서 사진하나 찰칵~<br/>
+										사진 찍을 동안만 잠시 벗었어요! 걱정마세요.</p>
 
 							</div>
 
@@ -578,8 +577,9 @@
 						 </div>
 
 						 <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-							 <h3>웨딩촬영 메이크업</h3>
+							 <h3>웨딩촬영 준비!</h3>
 								 <p>드디어 웨딩촬영 날이 밝았습니다.<br/>
+									서로 마주보고 걸터 앉아  <br/>
 									얼굴과 머리를 꽃단장하고 촬영 준비를 하고 한컷!</p>
 						 </div>
 
